--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_ar.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global_ar.properties
@@ -627,32 +627,61 @@ format.FinancialOct.startDate=MMM yyyy 'to '
 format.FinancialOct.endDate=MMM yyyy
 
 #-- Months and weeks -----------------------------------------------------------#
+#month.january=\u0643\u0627\u0646\u0648\u0646 \u0627\u0644\u062B\u0627\u0646\u064A
+#month.february=\u0634\u0628\u0627\u0637
+#month.march=\u0622\u0630\u0627\u0631
+#month.april=\u0646\u064A\u0633\u0627\u0646
+#month.may=\u0623\u064A\u0627\u0631
+#month.june=\u062D\u0632\u064A\u0631\u0627\u0646
+#month.july=\u062A\u0645\u0648\u0632
+#month.august=\u0622\u0628
+#month.september=\u0623\u064A\u0644\u0648\u0644
+#month.october=\u062A\u0634\u0631\u064A\u0646 \u0627\u0644\u0623\u0648\u0644
+#month.november=\u062A\u0634\u0631\u064A\u0646 \u0627\u0644\u062B\u0627\u0646\u064A
+#month.december=\u0643\u0627\u0646\u0648\u0646 \u0627\u0644\u0623\u0648\u0644
 
-month.january=\u0643\u0627\u0646\u0648\u0646 \u0627\u0644\u062b\u0627\u0646\u064a
-month.february=\u0634\u0628\u0627\u0637
-month.march=\u0622\u0630\u0627\u0631
-month.april=\u0646\u064a\u0633\u0627\u0646
-month.may=\u0623\u064a\u0627\u0631
-month.june=\u062d\u0632\u064a\u0631\u0627\u0646
-month.july=\u062a\u0645\u0648\u0632
-month.august=\u0622\u0628
-month.september=\u0623\u064a\u0644\u0648\u0644
-month.october=\u062a\u0634\u0631\u064a\u0646 \u0627\u0644\u0623\u0648\u0644
-month.november=\u062a\u0634\u0631\u064a\u0646 \u0627\u0644\u062b\u0627\u0646\u064a
-month.december=\u0643\u0627\u0646\u0648\u0646 \u0627\u0644\u0623\u0648\u0644
+#month.short.january=\u0643\u0627\u0646\u0648\u06462
+#month.short.february=\u0634\u0628\u0627\u0637
+#month.short.march=\u0622\u0630\u0627\u0631
+#month.short.april=\u0646\u064A\u0633\u0627\u0646
+#month.short.may=\u0623\u064A\u0627\u0631
+#month.short.june=\u062D\u0632\u064A\u0631\u0627\u0646
+#month.short.july=\u062A\u0645\u0648\u0632
+#month.short.august=\u0622\u0628
+#month.short.september=\u0623\u064A\u0644\u0648\u0644
+#month.short.october=\u062A\u0634\u0631\u064A\u06461
+#month.short.november=\u062A\u0634\u0631\u064A\u06462
+#month.short.december=\u0643\u0627\u0646\u0648\u06461
 
-month.short.january=\u0643\u0627\u0646\u0648\u06462
-month.short.february=\u0634\u0628\u0627\u0637
-month.short.march=\u0622\u0630\u0627\u0631
-month.short.april=\u0646\u064a\u0633\u0627\u0646
-month.short.may=\u0623\u064a\u0627\u0631
-month.short.june=\u062d\u0632\u064a\u0631\u0627\u0646
-month.short.july=\u062a\u0645\u0648\u0632
-month.short.august=\u0622\u0628
-month.short.september=\u0623\u064a\u0644\u0648\u0644
-month.short.october=\u062a\u0634\u0631\u064a\u06461
-month.short.november=\u062a\u0634\u0631\u064a\u06462
-month.short.december=\u0643\u0627\u0646\u0648\u06461
+#-- change for arabic libya start ------#
+month.january=\u064a\u0646\u0627\u064a\u0631
+month.february=\u0641\u0628\u0631\u0627\u064a\u0631
+month.march=\u0645\u0627\u0631\u0633
+month.april=\u0627\u0628\u0631\u064a\u0644
+month.may=\u0645\u0627\u064a\u0648
+month.june=\u064a\u0648\u0646\u064a\u0648
+month.july=\u064a\u0648\u0644\u064a\u0648
+month.august=\u0627\u063a\u0633\u0637\u0633
+error_occurred=\u062D\u062F\u062B \u062E\u0637\u0623
+month.september=\u0633\u0628\u062a\u0645\u0628\u0631
+month.october=\u0627\u0643\u062a\u0648\u0628\u0631
+month.november=\u0646\u0648\u0641\u0645\u0628\u0631
+month.december=\u062f\u064a\u0633\u0645\u0628\u0631
+
+month.short.january=\u064a\u0646\u0627\u064a\u0631
+month.short.february=\u0641\u0628\u0631\u0627\u064a\u0631
+month.short.march=\u0645\u0627\u0631\u0633
+month.short.april=\u0627\u0628\u0631\u064a\u0644
+month.short.may=\u0645\u0627\u064a\u0648
+month.short.june=\u064a\u0648\u0646\u064a\u0648
+month.short.july=\u064a\u0648\u0644\u064a\u0648
+month.short.august=\u0627\u063a\u0633\u0637\u0633
+month.short.september=\u0633\u0628\u062a\u0645\u0628\u0631
+month.short.october=\u0627\u0643\u062a\u0648\u0628\u0631
+month.short.november=\u0646\u0648\u0641\u0645\u0628\u0631
+month.short.december=\u062f\u064a\u0633\u0645\u0628\u0631
+
+#-- change for arabic libya end ------#
 
 weekday.monday=\u0627\u0644\u0627\u062b\u0646\u064a\u0646
 weekday.tuesday=\u0627\u0644\u062b\u0644\u0627\u062b\u0627\u0621
